# ensta_hbrs

./: README.md
devel/: .catkin  .rosinstall  setup.sh
ensta_bringup/: CMakeLists.txt
ensta_bringup_sim/: CMakeLists.txt
ensta_bringup_sim/launch/: gazebo_world.launch  pioneer3at.launch  pioneer3dx.launch  pioneer_empty_world.launch  robot.launch  rviz.launch  stage-pioneer-3dx-sick.launch  world_1.launch  world_2.launch  world_3.launch
ensta_bringup_sim/stage-worlds/: pioneer3dx-empty.world
ensta_environments/ensta_gazebo_objects/: CMakeLists.txt  package.xml
ensta_environments/ensta_gazebo_objects/Media/models/: box_wood.dae  carpet.dae  corrogated_box.dae
ensta_environments/ensta_gazebo_objects/common/objects/: box.urdf.xacro  box_wicker.urdf  carpet.urdf  corrogated_box.urdf  corrogated_box_two.urdf  couch.urdf.xacro  door.urdf.xacro  heavy_object.urdf.xacro  lamp.urdf  light_object.urdf.xacro  stool.urdf  stool.urdf.xacro  table_tv.urdf  tv_samsung.urdf  walls.urdf.xacro
ensta_environments/ensta_gazebo_objects/launch/: box.launch  door.launch  heavy_object.launch  light_object.launch  objects_grid.launch  s1_t1.launch  s1_t2.launch  world_3 (copy).launch  world_3.launch
ensta_environments/ensta_gazebo_worlds/: CMakeLists.txt  package.xml
ensta_environments/maps/: scenario_1 (copy).pgm  scenario_1.pgm  scenario_1.yaml  world-1.pgm  world-1.yaml  world-2.pgm  world-2.yaml  world-3.pgm  world-3.yaml
ensta_robots/: CMakeLists.txt  package.xml
ensta_robots/launch/: pioneer3dx.launch
ensta_robots/urdf/: pioneer3dx.xacro  pioneer3dx_wheel.xacro
knowledge_base/: CMakeLists.txt  package.xml  setup.py
knowledge_base/data/: object_information_all.yaml
knowledge_base/launch/: object_information_from_file.launch
knowledge_base/msg/: BoundingBox.msg  Object.msg  SemanticProperties.msg
knowledge_base/scripts/: all_query_server_node.py
knowledge_base/src/: all_query_client_node.cpp
pioneer3dx_2dnav/: CMakeLists.txt
pioneer3dx_2dnav/config/: base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  costmap_global.yaml  costmap_local.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  laser_filter.yaml  local_costmap_params.yaml  move_base.yaml  move_base_params.yaml
pioneer3dx_2dnav/launch/: move_base.launch
pioneer3dx_apps/: CMakeLists.txt  package.xml
pioneer3dx_apps/launch/: amcl.launch  gmapping.launch
pioneer3dx_navigation/: CMakeLists.txt  package.xml
pioneer3dx_navigation/config/: pioneer3dx_control.yaml
pioneer3dx_navigation/launch/: pioneer3dx_control.launch
pioneer3dx_teleop/: CMakeLists.txt  mainpage.dox
pioneer3dx_teleop/src/: pioneer3dx_teleop.cpp
rosbase_navigation/: CMakeLists.txt
rosbase_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  map.yaml
rosbase_navigation/launch/: .navigation.launch.swp  amcl.launch  frames.gv  navigation-pioneer-3dx.launch  navigation.launch
semantic_clear_costmap_recovery/: CMakeLists.txt  sccr_plugin.xml
semantic_clear_costmap_recovery/src/: semantic_clear_costmap_recovery.cpp
semantic_clear_costmap_recovery/test/: clear_tester.cpp  clear_tester.launch
semantic_costmap/layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
semantic_costmap/layers/cfg/: InflationHeavyObjectsPlugin.cfg
semantic_costmap/layers/include/layers/: dynamic_objects.h  heavy_objects_layer.h  inflate_objects.h  light_objects_layer.h  object_layer.h  observation_buffer.h  static_objects.h  structural_objects_layer.h  unknown_objects_layer.h
semantic_costmap/layers/src/: dynamic_objects.cpp  heavy_objects_layer.cpp  inflate_objects.cpp  light_objects_layer.cpp  object_layer.cpp  observation_buffer.cpp  static_objects.cpp  structural_objects_layer.cpp  unknown_objects_layer.cpp
semantic_costmap/query_knowledgebase/: CMakeLists.txt  package.xml
semantic_costmap/query_knowledgebase/include/query_knowledgebase/: client_library.h
semantic_costmap/query_knowledgebase/src/: client_library.cpp  client_library_node.cpp
semantic_costmap_layers/query_knowledgebase/: CMakeLists.txt
semantic_costmap_layers/semantic_costmap_layers/: CMakeLists.txt  package.xml
semantic_knowledge_base/semantic_costmap_global/: CMakeLists.txt  package.xml
semantic_knowledge_base/semantic_knowledge_base/: package.xml
semantic_knowledgebase/: CMakeLists.txt  package.xml
semantic_knowledgebase/data/: object_information_all.yaml  object_information_world_3.yaml  object_list.yaml  scenario_1.yaml  scenario_1_backup.yaml  scenario_1_test_1.yaml  scenario_1_test_2.yaml  world_3.yaml
semantic_knowledgebase/launch/: data_publisher_from_file.launch  object_information_from_file.launch  s1_t1.launch  s1_t2.launch  scenario_1.launch
semantic_knowledgebase/msg/: GeometricProperties.msg  Object.msg  ObjectInstance.msg  ObjectList.msg  Semantics.msg
semantic_knowledgebase/scripts/: add_two_ints_client.py  add_two_ints_server.py  all_query_server_node.py  box_publisher.py  entity_list_server.py  notes  object_publisher.py  talker.py  wall_publisher_from_file.py
semantic_knowledgebase/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  entity_list_client.cpp
semantic_knowledgebase/src/semantic_knowledgebase/: __init__.py  region_loader.py  talker.py
semantic_knowledgebase/srv/: KBService.srv
semantic_navigation/: package.xml
semantic_navigation/semantic_layered_costmap/: CMakeLists.txt  package.xml
semantic_navigation/semantic_navigation/: CMakeLists.txt
semantic_navigation/semantic_navigation_coordinator/: CMakeLists.txt  package.xml
semantic_planner/semantic_planner_global/: CMakeLists.txt
semanticbase_navigation/: CMakeLists.txt  package.xml
semanticbase_navigation/config/: semantic_costmap_global_params.yaml
semanticbase_navigation/launch/: semantic_navigation.launch
simple_layers/: CMakeLists.txt  costmap_plugins.xml  minimal.yaml  minimal_dummy.yaml  package.xml
simple_layers/params/: minimal.yaml
simple_layers/src/: grid_layer.cpp  simple_layer.cpp  structure_layer.cpp
using_markers/: CMakeLists.txt  package.xml
(+2537 files in other folders)
