<?xml version="1.0"?>
<package>
  <name>ensta_gazebo_objects</name>
  <version>0.0.1</version>
  <description>environment descriptions and models for the gazebo simulation</description>

  <maintainer email="niranjan.deshpande187@gmail.com">Niranjan Deshpande</maintainer>

  <license>GPLv3</license>

  <author email="niranjan.deshpande187@gmail.com">Niranjan Deshpande</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>convex_decomposition</run_depend>
  <run_depend>ivcon</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>xacro</run_depend>

</package>
